--- a/common/slide-header.tex
+++ b/common/slide-header.tex
@@ -2,9 +2,9 @@
 \usepackage[utf8]{inputenc}
 
 \mode<presentation>
-\usetheme{FreeElectrons}
+\usetheme{ITESM}
 
-\institute{Free Electrons}
+\institute{ITESM}
 
 \usepackage{eurosym}
 
